--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "three": "^0.167.1",
     "web-vitals": "^2.1.4"
   },
